[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scripts/FPSController.gd" type="Script" id=1]
[ext_resource path="res://Textures/Hand_idle.png" type="Texture" id=2]
[ext_resource path="res://Textures/flannel.jpg" type="Texture" id=3]
[ext_resource path="res://Scripts/Head.gd" type="Script" id=4]
[ext_resource path="res://Scripts/InteractionController.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Hand.gd" type="Script" id=6]
[ext_resource path="res://Animations/Idle.tres" type="Animation" id=7]
[ext_resource path="res://Animations/Punch.tres" type="Animation" id=8]
[ext_resource path="res://Textures/Arm.png" type="Texture" id=9]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 1.5

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 3 )

[sub_resource type="CapsuleMesh" id=3]
material = SubResource( 2 )
radius = 0.5
mid_height = 1.5

[sub_resource type="PlaneMesh" id=4]

[sub_resource type="SpatialMaterial" id=5]
flags_transparent = true
flags_unshaded = true
params_use_alpha_scissor = true
params_alpha_scissor_threshold = 0.98
albedo_texture = ExtResource( 2 )
uv1_scale = Vector3( 0.999, 1, 1 )

[sub_resource type="Animation" id=6]
resource_name = "Lasso"
step = 0.033
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.132, 0.198, 0.231, 0.264, 0.297, 0.33, 0.462, 0.594, 0.99 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.486894, -0.408205, -0.750011 ), Vector3( 0.425853, -0.408205, -0.878593 ), Vector3( 0.443802, -0.408205, -0.886015 ), Vector3( 0.375394, -0.408205, -0.889726 ), Vector3( 0.461751, -0.408205, -0.893437 ), Vector3( 0.470725, -0.428914, -0.897148 ), Vector3( 0.4797, -0.408205, -0.900859 ), Vector3( 0.515598, -0.408205, -0.915703 ), Vector3( 0.551496, -0.408205, -0.800326 ), Vector3( 0.486894, -0.408205, -0.750011 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.231, 0.528, 0.99 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 76.0921, 0, 0 ), Vector3( 72.8363, -6.28152, 1.49242 ), Vector3( 74.1103, -20.6135, 0.908432 ), Vector3( 76.0921, 0, 0 ) ]
}

[sub_resource type="PlaneMesh" id=7]

[sub_resource type="SpatialMaterial" id=8]
flags_transparent = true
albedo_texture = ExtResource( 9 )

[sub_resource type="BoxShape" id=9]
extents = Vector3( 1, 0.577481, 1 )

[node name="FPSController" type="KinematicBody"]
collision_layer = 4
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 3 )
material/0 = null

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25447, -0.521153 )
script = ExtResource( 4 )

[node name="Camera" type="Camera" parent="Head"]

[node name="RayCast" type="RayCast" parent="Head/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -10 )

[node name="Hand" type="StaticBody" parent="Head"]
transform = Transform( 0.471814, 0, 0, 0, 0.162491, -0.489356, 0, 0.65621, 0.121175, 0.486894, -0.408205, -0.750011 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="Head/Hand"]
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Head/Hand"]
anims/Idle = ExtResource( 7 )
anims/Lasso = SubResource( 6 )
anims/Punch = ExtResource( 8 )

[node name="MeshInstance2" type="MeshInstance" parent="Head/Hand"]
transform = Transform( 0.765655, -0.302677, -0.0604436, 0.114253, 0.997562, -0.102568, 0.048086, -0.0408827, 1.28119, 0.857178, 0.089996, 1.15902 )
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="Palm" type="Spatial" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.404036, -0.137552, -0.988579 )

[node name="InteractionController" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.21177 )
script = ExtResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="InteractionController"]
shape = SubResource( 9 )

[node name="Special_Cooldown" type="Timer" parent="."]
wait_time = 0.8

[node name="ExitHorseTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="LassoTimeout" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="LeftCooldown" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="RightCooldown" type="Timer" parent="."]
wait_time = 0.8
one_shot = true
[connection signal="area_entered" from="InteractionController" to="InteractionController" method="_on_InteractionController_area_entered"]
[connection signal="area_exited" from="InteractionController" to="InteractionController" method="_on_InteractionController_area_exited"]
[connection signal="body_entered" from="InteractionController" to="InteractionController" method="_on_InteractionController_body_entered"]
[connection signal="body_exited" from="InteractionController" to="InteractionController" method="_on_InteractionController_body_exited"]
[connection signal="timeout" from="Special_Cooldown" to="." method="_on_Special_Cooldown_timeout"]
[connection signal="timeout" from="ExitHorseTimer" to="." method="_on_ExitHorseTimer_timeout"]
[connection signal="timeout" from="LassoTimeout" to="." method="_on_LassoTimeout_timeout"]
[connection signal="timeout" from="LeftCooldown" to="." method="_on_LeftCooldown_timeout"]
[connection signal="timeout" from="RightCooldown" to="." method="_on_RightCooldown_timeout"]
